<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.dobbby.kdietitian.login.InitPlanFragment">

    <RelativeLayout
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/diet_weekly"
                    android:textSize="16sp"
                    android:textColor="#333"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:layout_marginTop="12dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <!--<com.dobbby.kdietitian.util.WbNumberPickerView-->
                <!--android:id="@+id/weight_picker1"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:layout_marginStart="35dp"-->
                <!--app:pickerTextColor="#333"-->
                <!--app:pickerIsCycle="true"-->
                <!--app:pickerTextMaxScale="2"-->
                <!--app:pickerMaxDisplayCount="3"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"/>-->

                <TextView
                        android:layout_gravity="center_vertical"
                        android:textColor="#333"
                        android:text="@string/_0"
                        android:textSize="24sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:text="@string/dot"
                        android:textStyle="bold"
                        android:textColor="#333"
                        android:textSize="24sp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="6dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <com.dobbby.kdietitian.util.WbNumberPickerView
                        android:id="@+id/weight_picker2"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="9dp"
                        app:pickerTextColor="#333"
                        app:pickerIsCycle="true"
                        app:pickerTextMaxScale="2"
                        app:pickerMaxDisplayCount="3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <com.dobbby.kdietitian.util.WbNumberPickerView
                        android:id="@+id/weight_picker3"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="18dp"
                        app:pickerTextColor="#333"
                        app:pickerIsCycle="true"
                        app:pickerTextMaxScale="2"
                        app:pickerMaxDisplayCount="3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:text="@string/kg"
                        android:textColor="#333"
                        android:textSize="18sp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="18dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/diet_hint_too_fast"
                    android:textSize="14sp"
                    android:textColor="@android:color/holo_red_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:textSize="16sp"
                    android:text="@string/expected_achieve_day"
                    android:layout_marginTop="60dp"
                    android:textColor="#333"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/x_weeks"
                    android:textSize="30sp"
                    android:text="@string/x_weeks"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/x_days"
                    android:textSize="14sp"
                    android:text="@string/x_days"
                    android:layout_marginTop="10dp"
                    android:textColor="#555"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button
                android:id="@+id/finish"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="13dp"
                android:layout_marginBottom="20dp"
                android:layout_alignParentBottom="true"
                style="@style/GreenButtonStyle"
                android:text="@string/finish"
                android:textSize="16sp"
                android:textColor="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </RelativeLayout>

</FrameLayout>
