<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:background="@color/whiteBackground"
                android:id="@+id/login_method"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.dobbby.kdietitian.login.LoginMethodFragment">

    <RelativeLayout
            android:layout_alignParentTop="true"
            android:layout_marginTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/wechat_icon"
                android:layout_centerHorizontal="true"
                android:background="@mipmap/wechat_icon"
                android:layout_width="55dp"
                android:layout_height="55dp"/>

        <ImageView
                android:id="@+id/weibo_icon"
                android:layout_marginEnd="42dp"
                android:layout_toStartOf="@id/wechat_icon"
                android:background="@mipmap/weibo_icon"
                android:layout_width="55dp"
                android:layout_height="55dp"/>

        <ImageView
                android:id="@+id/qq_icon"
                android:layout_marginStart="42dp"
                android:layout_toEndOf="@id/wechat_icon"
                android:background="@mipmap/qq_icon"
                android:layout_width="55dp"
                android:layout_height="55dp"/>

        <TextView
                android:text="@string/weibo"
                android:textSize="14sp"
                android:textColor="#9f9f9f"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:layout_below="@id/weibo_icon"
                android:layout_alignStart="@id/weibo_icon"
                android:layout_width="55dp"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/wechat"
                android:textSize="14sp"
                android:textColor="#9f9f9f"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:layout_below="@id/wechat_icon"
                android:layout_alignStart="@id/wechat_icon"
                android:layout_width="55dp"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/qq"
                android:textSize="14sp"
                android:textColor="#9f9f9f"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:layout_below="@id/qq_icon"
                android:layout_alignStart="@id/qq_icon"
                android:layout_width="55dp"
                android:layout_height="wrap_content"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/login_by_tel"
                android:textSize="17sp"
                android:text="@string/login_by_tel"
                android:textColor="#888"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/or"
                android:text="@string/or"
                android:textSize="17sp"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@id/login_by_tel"
                android:textColor="#888"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/sign_up_by_tel"
                android:text="@string/sign_up"
                android:textSize="17sp"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@id/or"
                android:textColor="#888"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
</RelativeLayout>