<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/whiteBackground"
             tools:context="com.dobbby.kdietitian.login.SignUpQueryPasswordFragment">

    <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="14dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="14dp"
                android:paddingEnd="14dp">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/nickname"
                    android:hint="@string/nickname_hint"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:layout_marginTop="6dp">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:hint="@string/password_hint"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:layout_marginTop="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/term_checkbox"
                    android:text="@string/i_agree"
                    android:textColor="#333"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/term_of_use"
                    android:text="@string/term_of_use"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </RelativeLayout>

        <Button
                android:id="@+id/sign_up"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="13dp"
                android:layout_marginTop="30dp"
                style="@style/GreenButtonStyle"
                android:text="@string/sign_up"
                android:textSize="16sp"
                android:textColor="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

</FrameLayout>
