<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/whiteBackground"
             tools:context="com.dobbby.kdietitian.login.SignUpQueryTelFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <FrameLayout
                android:id="@+id/tel_no_layout"
                android:layout_marginTop="14dp"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/tel_no"
                        android:hint="@string/input_tel"
                        android:maxLength="11"
                        android:maxLines="1"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                    android:id="@+id/query_pin"
                    android:text="@string/query_pin_message"
                    android:textSize="13sp"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </FrameLayout>

        <FrameLayout
                android:id="@+id/pin_layout"
                android:layout_marginTop="10dp"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/pin"
                        android:hint="@string/pin_message"
                        android:maxLength="6"
                        android:maxLines="1"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>

            <ImageButton
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="2dp"
                    android:id="@+id/clear_text"
                    android:background="@mipmap/clear_text"
                    android:layout_width="13dp"
                    android:layout_height="13dp"/>
        </FrameLayout>

        <TextView
                android:id="@+id/tel_restriction_text"
                android:paddingStart="18dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/tel_restriction"
                android:textSize="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/next_step"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="13dp"
                android:layout_marginTop="40dp"
                style="@style/GreenButtonStyle"
                android:text="@string/next_step"
                android:textSize="16sp"
                android:textColor="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>
</FrameLayout>